[tool.poetry]
name = "nutritional-value-recipes"
version = "0.1.0"
description = ""
authors = ["mariannabaldez <mariannabaldez@gmail.com>"]
readme = "README.md"
packages = [{include = "nutritional_value_recipes"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.22"
postgres = "^4.0"
fastapi = "^0.104.1"
unidecode = "^1.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
